<resources>
    <string name="app_name">AfrocamGistChat</string>
    <string name="email">Email</string>
    <string name="emailOrMobile">Mobile No or Email</string>
    <string name="password">Password</string>
    <string name="forgotPasswordQuestion">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerHere">Register here</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="OTP">OTP</string>
    <string name="requestOTP">Request OTP</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signUp">SignUp</string>
    <string name="haveAccount">Have an account ?</string>
    <string name="loginHere">Login here</string>
    <string name="confirmOTP">Confirm OTP</string>
    <string name="withoutCountryCode">If registering with mobile number please do not append country code to your mobile number. Only enter your mobile number (e.g. 08989898989)</string>
    <string name="menu">Menu</string>
    <string name="camera">Camera</string>
    <string name="searchchat">searchChat</string>
    <string name="gallery">Gallery</string>
    <string name="notification">Notification</string>
    <string name="afroGroup">Afro Group</string>
    <string name="afroTalent">Afro Talent</string>
    <string name="afroSwagger">Afro Swagger</string>
    <string name="afroExplorer">Afro Explorer</string>
    <string name="afroChat">Afro Chat</string>
    <string name="myGroups">Group You Manage</string>
    <string name="joinedGroups">Joined Groups</string>
    <string name="invitations">Invitations</string>
    <string name="createGroup">Create group</string>
    <string name="join">Join</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="leave">Leave</string>
    <string name="reject">Reject</string>
    <string name="uploadCover">Upload cover image</string>
    <string name="sampleGroup">GROUP NAME</string>
    <string name="hintgroupname">Group name</string>
    <string name="about">About</string>
    <string name="hintAbout">Group description</string>
    <string name="topic">Topic</string>
    <string name="visibility">Visibility</string>
    <string name="pub">Public</string>
    <string name="pri">Private</string>
    <string name="groupMembers">Group Members</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="members">Members</string>
    <string name="save">Save</string>
    <string name="writeSomething">Write Something &#8230;</string>
    <string name="roleModel">Role Model</string>
    <string name="removeRoleModel">Remove Role Model</string>
    <string name="undo">Undo</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="roleModels">Role Models</string>
    <string name="interests">Interests</string>
    <string name="profession">Profession</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="message">Message</string>
    <string name="followRequests">Follow Requests</string>
    <string name="tellUsSomethingAboutYourself">Tell us something about yourself</string>
    <string name="invite">Invite</string>
    <string name="sent">Sent</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="dummyComment">Loreum Ipsum</string>
    <string name="reply">Reply</string>
    <string name="writeComment">Write Comment &#8230;</string>
    <string name="showTalent">Show the world your talent &#8230;</string>
    <string name="popularPosts">Popular Posts</string>
    <string name="peopleWhoReacts">People Who Reacts</string>
    <string name="postHereText">Post here &#8230;</string>
    <string name="swaggerMe">Swagger me the ginger &#8230;</string>
    <string name="suggestedPeople">Suggested People</string>
    <string name="menu_share">Share</string>
    <string name="edit">Edit</string>
    <string name="mention" translatable="false">Mention</string>
    <string name="edit_post">Edit Post</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="upload">Upload</string>
    <string name="postImages">Post Images</string>
    <string name="backgroundColor">Select background color</string>
    <string name="backgroundImage">Select background image</string>
    <string name="none">None</string>
    <string name="posting">Posting&#8230;</string>
    <string name="photos">Photos</string>
    <string name="hashtags">Hashtags</string>
    <string name="entertainment">Entertainment</string>
    <string name="followingHashtags">Following Hashtags</string>
    <string name="trendingHashtags">Trending Hashtag</string>
    <string name="reportPost">Report Post</string>
    <string name="report">Report</string>
    <string name="dummyContent">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic lif</string>
    <string name="delete_group_alert_message">Are you sure you want to delete the group ?</string>
    <string name="leave_group_alert_message">Are you sure you want to leave the group ?</string>
    <string name="str_leave">Leave</string>
    <string name="unique_username">Username</string>
    <string name="username_is_available">Username is available</string>
    <string name="settings_string">Settings</string>
    <string name="upload_cover_image_str">Upload Cover Image</string>
    <string name="email_id_str">Email id</string>
    <string name="gender_str">Gender</string>
    <string name="phone_number_str">Phone number</string>
    <string name="religion_str">Religion</string>
    <string name="interests_str">Interests</string>
    <string name="country_str">Country</string>
    <string name="date_of_birth_str">Date of Birth</string>
    <string name="password_str">Password</string>
    <string name="visibility_str">Visibility</string>
    <string name="update_detail_str">Update detail</string>
    <string name="requested">Requested</string>
    <string name="please_tag_atleast_one_user">Please tag at least one user</string>
    <string name="are_you_sure_you_want_to_deactivate_this_account">Are you sure you want to deactivate this account ?</string>
    <string name="opps_something_went_wrong">Oops something went wrong....</string>
    <string name="no_internet_connection_available">No internet connection available.</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="post_deleted_successfully">Post Deleted Successfully</string>
    <string name="are_you_sure_you_want_to_hide_the_post">Are you sure you want to hide the post ?</string>
    <string name="user_reported_successfully">User Reported Successfully</string>
    <string name="please_enter_message">Please Enter Message</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="please_enter_valid_otp">الرجاء إدخال OTP صالح</string>
    <string name="please_check_your_email_for_otp_thanks">Please Check Your Email for OTP. Thanks.</string>
    <string name="user_logged_in_successfully">User logged in successfully</string>
    <string name="please_enter_valid_email_or_password">Please enter valid email or password.</string>
    <string name="your_facebook_account_doesnt_have_email">Your facebook account doesn\'t have email</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_details">Enter Group Details</string>
    <string name="opps_something_went_wrong_please_try_again_later">Opps!! Something went wrong please try again later.</string>
    <string name="post_created_successfully">Post Created Successfully</string>
    <string name="story_added_successfully">Story Added Successfully</string>
    <string name="picture_updated_successfully">Picture Updated Successfully</string>
    <string name="group_details_updated_successfully">Group details updated successfully.</string>
    <string name="post_edited_successfully">Post edited successfully</string>
    <string name="please_enter_email_or_contact_number">Please enter email or contact number.</string>
    <string name="str_video_downloaded">Video downloaded</string>
    <string name="str_download_err">Download error: </string>
    <string name="str_invalid_email_or_mobile">Invalid email or mobile</string>
    <string name="str_invalid_password">Invalid password</string>
    <string name="image_is_uploaded_successfully">Image is uploaded successfully.</string>
    <string name="post_reported_successfully">Post reported successfully</string>
    <string name="please_provide_reason_to_report_the_post">Please provide a reason to report the post.</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="first_name_is_required">First Name is required.</string>
    <string name="last_name_is_required">Last Name is required.</string>
    <string name="date_of_birth_required">Date of birth is required.</string>
    <string name="please_select_interest">Please select interest.</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="please_upload_profile_image">Please Upload Profile Image..</string>
    <string name="post_shared_successfully">Post shared successfully</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name.</string>
    <string name="enter_email_or_mobile">Enter email or mobile</string>
    <string name="password_must_greater_than_six_character">Password must be grater then 6 character...</string>
    <string name="sorry_post_deleted">Sorry Post Deleted..</string>
    <string name="str_post_hide">Post hide</string>
    <string name="group">Group</string>
    <string name="home">Home</string>
    <string name="view">view</string>
    <string name="deckard_shaw">Deckard Shaw</string>
    <string name="no_message_yet">No Message Yet</string>
    <string name="new_messages">New Messages</string>
    <string name="replying_to_harry_pal">Replying to Harry Pal</string>
    <string name="type_here">Type here...</string>
    <string name="user_blocked">User was blocked by you!.\nPlease Unblock to send message</string>
    <string name="cancel">Cancel</string>
    <string name="no_comments_to_show">No comments to show</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_group">Create Group</string>
    <string name="number_24">24</string>
    <string name="hashtag">#hashtag</string>
    <string name="str_mention">\@mention</string>
    <string name="fonts">Fonts</string>
    <string name="aa">Aa</string>
    <string name="number_5">+5</string>
    <string name="select_image_type">Select image type :</string>
    <string name="normal">Normal</string>
    <string name="zoom">Zoom</string>
    <string name="tag_people">Tag People</string>
    <string name="eken_eken">Eken Eken</string>
    <string name="profile_strength">Profile strength</string>
</resources>